package co.edu.utp.misiontic.nelsoncruz.model;

public enum EstadoPedido {
    PENDIENTE_ENTREGAR, PENDIENTE_COBRAR;
}
